Attempt to fix categories visibility in the sidebar.

--- a/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
+++ b/web/app/themes/isto/resources/assets/styles/_woocomerce-global.pcss
@@ -9,8 +9,10 @@
 }
 
 body:not(.term-ypatingi-pasiulymai) {
-    li:first-child {
-        display: none;
+    .wc-block-product-categories-list {
+        li:first-child {
+            display: none;
+        }
     }
 }
 
